--- a/modifier les textes pour que ce soit une string seulement-Copy1.ipynb
+++ b/modifier les textes pour que ce soit une string seulement-Copy1.ipynb
@@ -36,8 +36,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below, I want to read every file and find the paragraphs that contain the word temessuk. I want to find the word temessuk, look at what's behind, look at what's after.\n",
+    "\n",
+    "I decided to mark any \\n\\n with 'marker' and then delete all remaining \\n to create a single string. it makes the re.findall(x, text) more efficient in that it allows me to avoid integrating \\n in my re.findall equation.\n",
+    "\n",
+    "The problem I face concerns is this:\n",
+    "(?<= marker ).*temessük.+?(?= marker )\n",
+    "the (?<= marker ).* is problematic for it says: find \"marker\" match any character until \"temessük\". So it still matches the \"marker\" after the \"marker\"... so I tried writing \n",
+    "        paragraphs = re.findall(r\"(?<= marker.? )[^\\bmarker\\b].*temessük.+?[^\\bmarker\\b](?=marker)\", text)\n",
+    " But it won't work."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +71,7 @@
     "        text = f.read()\n",
     "        text = re.sub(\"\\n\\n\", \" marker \", text)\n",
     "        text = re.sub(\"\\n\", \"\", text)\n",
-    "        paragraphs = re.findall(r'(?<= marker ).*temess.+?(?= marker )', text)\n",
+    "        paragraphs = regex.findall(r'(?<= marker ).*temessük.+?(?= marker )', text)\n",
     "        text = \"\\n\".join(paragraphs)\n",
     "        print(text)"
    ]
