--- a/Final Project - Notebooks/Secondary Notebook - Which Search Engine is better?.ipynb
+++ b/Final Project - Notebooks/Secondary Notebook - Which Search Engine is better?.ipynb
@@ -67,17 +67,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "That's impressive, our program found 214 times more catalogue entries with the word temessuk! That's impressive, and proves the program itself is very useful. That is, of course, assuming none of my documents are *bis*.\n",
+    "That's impressive, our program found 214 times more catalogue entries with the word temessuk! That proves the program is quite useful without even diving into quantitative analysis.\n",
     "\n",
-    "At first sight, thus, our program seems more efficient than theirs. I have also experimented this with other words, and the results were systematically higher. In order to make sure of my program's superior effectiveness, I would need to first make sure I do not have doubled paragraphs or paragraphs cut in two. One way of doing so would be to make sure that all documents start with the peculiar identification method of the transliterators that is with a digit and a serial number between brackets. Then, I'd need to run my program with several words and compare the results with the website's results."
+    "At first sight, thus, our program seems more efficient than theirs. I have also experimented this with other words, and the results were systematically higher. That is, of course, assuming none of my documents are *bis*. \n",
+    "\n",
+    "In order to make sure of my program's superior effectiveness, I would need to first make sure I do not have doubled paragraphs or paragraphs cut in two. One way of doing so would be to make sure that all documents start with the peculiar identification method of the transliterators that is with a digit and a serial number between brackets. Then, I'd need to run my program with several words and compare the results with the website's results."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
